# metabook

./: .gitignore  README.md
bookserver/: bookserver.cabal
bookserver/app/: Main.hs
bookserver/src/: App.hs  Description.hs  Models.hs  Routing.hs  RunDb.hs
client/: index.html
client/books/: index.html
gui/: gui.cabal
gui/src/: App.hs
metaserver/: LICENSE  Makefile  Routing.hs  metaserver.cabal
metaserver/app/: Main.hs
metaserver/src/: App.hs  Books.hs  Dbm.hs  Lib.hs  Models.hs  Routing.hs  Routings.hs  RunDb.hs
metaserver2/: metaserver.cabal  metaserver2.cabal
metaserver2/src/: App.hs  Books.hs  Dbm.hs  Models.hs  Routing.hs  RunDb.hs
plan/: models.txt  plan.txt
